--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#FF4949</color>
+    <color name="colorPrimaryDark">#D63939</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="numbersBack">#EEFF45</color>
+    <color name="simpleFunctionsBack">#A7FF45</color>
+    <color name="addtionalFunctionsBack">#2AE1FF</color>
 </resources>
