--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="numbersBack">#EEFF45</color>
-    <color name="simpleFunctionsBack">#A7FF45</color>
+    <color name="simpleFunctionsBack">#73D338</color>
     <color name="addtionalFunctionsBack">#2AE1FF</color>
 </resources>
