--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:id="@+id/activity_main"
+    style="@style/AppBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,20 +17,18 @@
 
         <TextView
             android:id="@+id/pole"
+            style="@style/InputArea"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:textSize="25sp"
-            android:textStyle="normal|bold" />
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/button_clear"
-            style="@style/simpleFunctions"
+            style="@style/Clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="AC" />
+            android:text="C" />
 
     </LinearLayout>
 
@@ -41,9 +40,9 @@
         android:background="@color/colorPrimary" />
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button1"
@@ -70,12 +69,12 @@
             android:text="3" />
 
         <Button
-            android:id="@+id/button_multiple"
+            android:id="@+id/button_add"
             style="@style/simpleFunctions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="*" />
+            android:text="+" />
 
         <Button
             android:id="@+id/button_sin"
@@ -96,9 +95,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button4"
@@ -125,12 +124,12 @@
             android:text="6" />
 
         <Button
-            android:id="@+id/button_div"
+            android:id="@+id/button_sub"
             style="@style/simpleFunctions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="/" />
+            android:text="-" />
 
         <Button
             android:id="@+id/button_cos"
@@ -150,9 +149,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button7"
@@ -179,12 +178,12 @@
             android:text="9" />
 
         <Button
-            android:id="@+id/button_add"
+            android:id="@+id/button_multiple"
             style="@style/simpleFunctions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="+" />
+            android:text="*" />
 
         <Button
             android:id="@+id/button_tan"
@@ -204,9 +203,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button_dot"
@@ -233,12 +232,12 @@
             android:text="=" />
 
         <Button
-            android:id="@+id/button_sub"
+            android:id="@+id/button_div"
             style="@style/simpleFunctions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="-" />
+            android:text="/" />
 
         <Button
             android:id="@+id/button_ctan"
@@ -258,16 +257,16 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     </LinearLayout>
 
