--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -225,7 +225,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/sqrt_button" />
+                android:text="@string/sqrt_button"
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/button_pow"
@@ -233,7 +234,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/power_button" />
+                android:text="@string/power_button"
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/button_log"
@@ -241,7 +243,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="LOG" />
+                android:text="LOG"
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/button_procent"
@@ -249,7 +252,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="%" />
+                android:text="%"
+                android:textSize="24sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -263,7 +267,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="SIN" />
+                android:text="SIN"
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/button_cos"
@@ -271,7 +276,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="COS" />
+                android:text="COS"
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/button_tan"
@@ -279,7 +285,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TAN" />
+                android:text="TAN"
+                android:textSize="24sp" />
 
             <Button
                 android:id="@+id/button_ctan"
@@ -287,7 +294,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="CTAN" />
+                android:text="CTAN"
+                android:textSize="24sp" />
         </LinearLayout>
     </LinearLayout>
 
